.metals/.reports/metals/r_scala-toplevel-mtags_1691304673273
id: file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_7/Q2.scala:[7..7) in Input.VirtualFile("file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_7/Q2.scala", "object ")
file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_7/Q2.scala:1: error: expected identifier; obtained eof
object 
       ^